기록용 커밋 - 깨진 파일 수정중